--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,8 @@
+[user]
+
+	email = <fillmein>
+	name = <fillmein>
+
 [alias]
 
 	# View abbreviated SHA, description, and history graph of the latest 20 commits
@@ -78,6 +83,27 @@
 			git commit --amend -m \"$(git log -1 --pretty=%B)\n\nCloses #$1.\"; \
 		fi \
 	}; f"
+	lb = ! listb
+	nb = ! newb
+	gb = ! getb
+	sb = ! setupb
+	db = ! dropb
+	kb = ! killb
+
+	branch-by-date = "!f() { for k in `git branch|perl -pe s/^..//`;do echo `git show --pretty=format:'%Cgreen%ci %Cblue%cr%Creset' $k|head -n 1` $k; done | sort -r; }; f"
+	latest = "rev-parse HEAD"
+	lastest = "rev-parse HEAD"
+	st = status
+	ci = commit
+	br = branch
+	co = checkout
+	df = diff
+	dc = diff --cached
+	lg = log -p
+	lol = log --graph --decorate --pretty=oneline --abbrev-commit
+	lola = log --graph --decorate --pretty=oneline --abbrev-commit --all
+	ls = ls-files
+	ign = ls-files -o -i --exclude-standard
 
 [apply]
 
@@ -135,7 +161,7 @@
 [commit]
 
 	# https://help.github.com/articles/signing-commits-using-gpg/
-	gpgsign = true
+	# gpgsign = true
 
 [diff]
 
@@ -187,3 +213,6 @@
 [url "git://gist.github.com/"]
 
 	insteadOf = "gist:"
+
+[gpg]
+	program = gpg2
